<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/baseline_list_alt_24"
            android:title="@string/bedlist" />
        <item
            android:id="@+id/nav_report"
            android:icon="@drawable/report"
            android:title="@string/report"/>
        <item
            android:id="@+id/nav_createuser"
            android:icon="@drawable/baseline_person_add_24"
            android:title="@string/create_new_account"
            />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/settings"
            android:title="@string/action_setting" />
    </group>

</menu>