<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.account.CreateAccountFragment">
<!--    <LinearLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="60sp"-->
<!--        android:gravity="center"-->
<!--        android:orientation="vertical">-->
<!--        <LinearLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent"-->
<!--            android:orientation="horizontal">-->
<!--            <HorizontalScrollView-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:scrollbars="none">-->
<!--                <TextView-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:text="@string/app_name"-->
<!--                    android:textSize="20sp"-->
<!--                    android:padding="16dp"/>-->
<!--            </HorizontalScrollView>-->
<!--        </LinearLayout>-->
<!--        <com.google.android.material.textfield.TextInputLayout-->
<!--            android:id="@+id/filledTextField1"-->
<!--            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginStart="32dp"-->
<!--            android:layout_marginTop="64dp"-->
<!--            android:layout_marginEnd="32dp"-->
<!--            android:hint="መለያ ስም ያስገቡ">-->
<!--            <com.google.android.material.textfield.TextInputEditText-->
<!--                android:id="@+id/username"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginTop="96dp"-->
<!--                android:inputType="textEmailAddress"-->
<!--                android:selectAllOnFocus="true"/>-->
<!--        </com.google.android.material.textfield.TextInputLayout>-->
<!--        <com.google.android.material.textfield.TextInputLayout-->
<!--            android:id="@+id/filledTextField11"-->
<!--            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginStart="32dp"-->
<!--            android:layout_marginTop="4dp"-->
<!--            android:layout_marginEnd="32dp"-->
<!--            android:hint="ሚስጥር ቁጥር ያስገቡ ">-->
<!--            <com.google.android.material.textfield.TextInputEditText-->
<!--                android:id="@+id/password"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginTop="96dp"-->
<!--                android:inputType="textPassword"-->
<!--                android:selectAllOnFocus="true"/>-->
<!--        </com.google.android.material.textfield.TextInputLayout>-->
<!--        <com.google.android.material.textfield.TextInputLayout-->
<!--            android:id="@+id/filledTextField115"-->
<!--            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginStart="32dp"-->
<!--            android:layout_marginTop="4dp"-->
<!--            android:layout_marginEnd="32dp"-->
<!--            android:hint="ሚስጥር ቁጥር ያስገቡ ">-->
<!--            <com.google.android.material.textfield.TextInputEditText-->
<!--                android:id="@+id/role"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginTop="96dp"-->
<!--                android:inputType="textPassword"-->
<!--                android:selectAllOnFocus="true"/>-->
<!--        </com.google.android.material.textfield.TextInputLayout>-->
<!--        <LinearLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent"-->
<!--            android:layout_marginTop="12sp"-->
<!--            android:gravity="center"-->
<!--            android:orientation="horizontal">-->
<!--            <Button-->
<!--                android:id="@+id/login"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="@string/action_sign_in"-->
<!--                />-->
<!--        </LinearLayout>-->

<!--        <LinearLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent"-->
<!--            android:layout_gravity="center"-->
<!--            android:orientation="horizontal">-->
<!--            <ProgressBar-->
<!--                android:id="@+id/loading"-->
<!--                android:foregroundGravity="center_horizontal"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_gravity="center"-->
<!--                android:layout_marginTop="64dp"-->
<!--                android:layout_marginBottom="64dp"-->
<!--                android:visibility="gone" />-->
<!--        </LinearLayout>-->
<!--    </LinearLayout>-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/headerLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="12dp"
            android:text="@string/create"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/txtMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="Create new officer account "
            android:textColor="@color/black"
            android:textSize="17sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/usernameContainer"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="23dp"
            android:layout_marginTop="13dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/username"
                android:inputType="text"
                android:lines="1" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailContainer"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="23dp"
            android:layout_marginTop="13dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/email"
                android:inputType="text"
                android:lines="1" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phoneContainer"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="23dp"
            android:layout_marginTop="13dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/phonenumber"
                android:inputType="number"
                android:lines="1" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogin1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="12dp"
            android:text="@string/register"
            android:textColor="@color/white"
            android:backgroundTint="@color/greens"
            android:textAllCaps="false"
            android:background="@drawable/button_border"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="12sp"
            android:orientation="horizontal">

            <ProgressBar
                android:id="@+id/loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>